--- a/.render.yaml
+++ b/.render.yaml
@@ -6,9 +6,10 @@ services:
     buildCommand: npm install
     startCommand: npm start
     envVars:
-      - key: CLIENT_ID
+      - key: client_id
         value: 1000.PMKVL76WC40TDI4LS9Q0MOCRGIPE0A
-      - key: CLIENT_SECRET
+      - key: client_secret
         value: 225bac66c839b4b48df2c5b63552bc6e37108f76bb
-      - key: REFRESH_TOKEN
+      - key: refresh_token
         value: 1000.eaa8b6abd9501f19a7318a3832e26d86.b7332829e917faf5db8dc1df3d24d60a
+      - grant_type: refresh_token
